Connect Python SQL

--- a/connectPythonMysql.ipynb
+++ b/connectPythonMysql.ipynb
@@ -41,19 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2aea05fa",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Utente: 1 -> Mario Rossini - Roma\n",
+      "Utente: 2 -> Giuseppe Verdi - Firenze\n"
+     ]
     }
    ],
    "source": [
@@ -62,6 +60,7 @@
     "# mc.connect stabilisce un collegamento al DB passando i parametri di connessione\n",
     "db = mc.connect(\n",
     "    host='localhost',\n",
+    "    port=3306,\n",
     "    user='root',\n",
     "    password='root',\n",
     "    database='python_db'\n",
@@ -69,16 +68,71 @@
     "\n",
     "cursor = db.cursor() # Oggetto capace di comunicare con il database\n",
     "\n",
-    "sql =   'CREATE TABLE IF NOT EXISTS users (\\\n",
+    "def crea_tabella_utenti():\n",
+    "    sql =   'CREATE TABLE IF NOT EXISTS users (\\\n",
     "            id INT NOT NULL AUTO_INCREMENT PRIMARY KEY,\\\n",
     "            firstname VARCHAR(100) NOT NULL,\\\n",
     "            lastname VARCHAR(100) NOT NULL,\\\n",
     "            city VARCHAR(100) NULL\\\n",
     "        )'\n",
     "        \n",
-    "cursor.execute(sql)\n",
+    "    cursor.execute(sql)\n",
     "\n",
-    "cursor.close()"
+    "def aggiungi_utente():\n",
+    "    nome = input(f\"Inserisci nome: \")\n",
+    "    cognome = input(f\"Inserisci cognome: \")\n",
+    "    citta = input(f\"Inserisci la città: \")\n",
+    "    \n",
+    "    sql = \"INSERT INTO users (firstname, lastname, city) VALUES (%s, %s, %s)\"\n",
+    "    values = (nome, cognome, citta)\n",
+    "    cursor.execute(sql, values)\n",
+    "    \n",
+    "    db.commit()\n",
+    "    if cursor._last_insert_id:\n",
+    "        print(f\"Utente {nome} {cognome} salvato nel DB!\")\n",
+    "\n",
+    "def visualizza_utenti():\n",
+    "    sql = \"SELECT * FROM users\"\n",
+    "    cursor.execute(sql)\n",
+    "    listaUtenti = cursor.fetchall()\n",
+    "    \n",
+    "    # print(listaUtenti)\n",
+    "    for utente in listaUtenti:\n",
+    "        print(f\"Utente: {utente[0]} -> {utente[1]} {utente[2]} - {utente[3]}\")\n",
+    "\n",
+    "def visualizza_dettaglio_utente(id):\n",
+    "    sql = f\"SELECT * FROM users WHERE id = {id}\"\n",
+    "    cursor.execute(sql)\n",
+    "    utente = cursor.fetchone()\n",
+    "    return utente\n",
+    "\n",
+    "def modifica_utente():\n",
+    "    visualizza_utenti()\n",
+    "    scelta = input('Quale utente vuoi modificare?')\n",
+    "    utente = visualizza_dettaglio_utente(scelta)\n",
+    "    if utente:\n",
+    "        nome = input(f\"Inserisci nome ({utente[1]}) : \") or utente[1]\n",
+    "        cognome = input(f\"Inserisci cognome ({utente[2]}) : \") or utente[2]\n",
+    "        citta = input(f\"Inserisci la città ({utente[3]}): \") or utente[3]\n",
+    "        \n",
+    "        sql = \"UPDATE users SET firstname = %s, lastname = %s, city = %s WHERE id = %s\"\n",
+    "        values = (nome, cognome, citta, utente[0])\n",
+    "        cursor.execute(sql, values)\n",
+    "        db.commit()\n",
+    "        \n",
+    "        print(f\"Utente modificato con successo\")\n",
+    "    else:\n",
+    "        print(f\"Utente non trovato nel DB\")\n",
+    "\n",
+    "# crea_tabella_utenti()\n",
+    "# aggiungi_utente()\n",
+    "\n",
+    "# print(visualizza_dettaglio_utente(2))\n",
+    "# modifica_utente()\n",
+    "visualizza_utenti()\n",
+    "\n",
+    "cursor.close()\n",
+    "db.close()"
    ]
   }
  ],
