Traccia Esercizio Python MySQL

--- a/connectPythonMysql.ipynb
+++ b/connectPythonMysql.ipynb
@@ -41,19 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2aea05fa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Utente: 1 -> Mario Rossini - Roma\n",
-      "Utente: 2 -> Giuseppe Verdi - Firenze\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mysql.connector as mc\n",
     "\n",
@@ -124,15 +115,82 @@
     "    else:\n",
     "        print(f\"Utente non trovato nel DB\")\n",
     "\n",
-    "# crea_tabella_utenti()\n",
-    "# aggiungi_utente()\n",
+    "def elimina_utente():\n",
+    "    visualizza_utenti()\n",
+    "    scelta = input(f'Quale utente vuoi elimimare?')\n",
+    "    sql = 'DELETE FROM users WHERE id = %s' \n",
+    "    cursor.execute(sql, (scelta,)) # Una tupla deve avere almeno 2 valori\n",
+    "    db.commit()\n",
+    "    \n",
+    "    if cursor.rowcount > 0:\n",
+    "        print(f'Utente cancellato con successo!!')\n",
+    "    else:\n",
+    "        print(f\"Utente non trovato nel DB\")\n",
     "\n",
+    "def menu():\n",
+    "    while True:\n",
+    "        print(f'1 -> Visualizza Utenti')\n",
+    "        print(f'2 -> Aggiungi Utente')\n",
+    "        print(f'3 -> Modifica Utente')\n",
+    "        print(f'4 -> Elimina Utente')\n",
+    "        print(f'0 -> Esci')\n",
+    "        \n",
+    "        scelta = int(input(f'Cosa vuoi fare?'))\n",
+    "        if scelta == 0: return\n",
+    "        elif scelta == 1: visualizza_utenti()\n",
+    "        elif scelta == 2: aggiungi_utente()\n",
+    "        elif scelta == 3: modifica_utente()\n",
+    "        elif scelta == 4: elimina_utente()\n",
+    "        else: print(f'Valore errato')\n",
+    "    \n",
+    "crea_tabella_utenti()\n",
+    "# aggiungi_utente()\n",
     "# print(visualizza_dettaglio_utente(2))\n",
     "# modifica_utente()\n",
-    "visualizza_utenti()\n",
+    "# visualizza_utenti()\n",
+    "# elimina_utente()\n",
+    "menu()\n",
+    "\n",
+    "print(f'------ FINE -----')\n",
     "\n",
     "cursor.close()\n",
     "db.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af3d20dc",
+   "metadata": {},
+   "source": [
+    "Creare un'applicazione in Python che utilizza MySQL per gestire un sistema di libreria, includendo la gestione del prestito dei libri.\n",
+    "\n",
+    "Setup del progetto:\n",
+    "\n",
+    "Installare le librerie necessarie (mysql.connector per interagire con Mysql).\n",
+    "Creare un database chiamato libreria e una tabella chiamata libri opz(utenti).\n",
+    "\n",
+    "Definizione del libro: Ogni libro deve avere i seguenti attributi:\n",
+    "\n",
+    "titolo (string)\n",
+    "autore (string)\n",
+    "anno_pubblicazione (int)\n",
+    "genere (string)\n",
+    "disponibile (boolean)\n",
+    "prestiti (lista di oggetti che contengono informazioni sul prestito, come nome del prestatario e data del prestito)\n",
+    "\n",
+    "Funzionalità dell'applicazione:\n",
+    "\n",
+    "Aggiungi libro: Implementare una funzione che consente di aggiungere un nuovo libro alla collezione.\n",
+    "Visualizza libri: Implementare una funzione che mostra tutti i libri presenti nella collezione, evidenziando se sono disponibili o meno.\n",
+    "Modifica libro: Implementare una funzione che consente di modificare le informazioni di un libro esistente (identificato da titolo o autore).\n",
+    "Elimina libro: Implementare una funzione per rimuovere un libro dalla collezione.\n",
+    "Prestito libro: Implementare una funzione che consente di prestare un libro a un utente. Dovrà aggiornare lo stato del libro e registrare le informazioni del prestito.\n",
+    "Restituzione libro: Implementare una funzione che consente di restituire un libro, aggiornando lo stato del libro e rimuovendo il prestito dalla lista.\n",
+    "\n",
+    "Interfaccia utente:\n",
+    "\n",
+    "Creare un semplice menu a console che permetta all'utente di scegliere quale operazione eseguire (aggiungere, visualizzare, modificare, eliminare, prestare o restituire un libro).\n",
+    "Gestire le eccezioni per garantire che l'input dell'utente sia valido."
    ]
   }
  ],
