Soluzione Esercizio Python MySQL

--- a/connectPythonMysql.ipynb
+++ b/connectPythonMysql.ipynb
@@ -167,7 +167,7 @@
     "Setup del progetto:\n",
     "\n",
     "Installare le librerie necessarie (mysql.connector per interagire con Mysql).\n",
-    "Creare un database chiamato libreria e una tabella chiamata libri opz(utenti).\n",
+    "Creare un database chiamato libreria e una tabella chiamata libri opz(utenti, prestiti).\n",
     "\n",
     "Definizione del libro: Ogni libro deve avere i seguenti attributi:\n",
     "\n",
