MongoDB Python MySQL

--- a/connectPythonMongo.ipynb
+++ b/connectPythonMongo.ipynb
@@ -70,7 +70,233 @@
     "connectionString = 'mongodb+srv://admin:md75U6GzY7aY7YpG@cluster0.7opl1ou.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'\n",
     "cluster = MongoClient(connectionString)\n",
     "db = cluster['DataMongoPython2']\n",
-    "users = db['Users']\n"
+    "users = db['Users']\n",
+    "\n",
+    "# Inserire dati nella collection -> INSERT INTO nomeTabella in SQL\n",
+    "# Per inserire un record in MongoDB, utilizziamo il metodo insert_one()\n",
+    "# Il metodo insert_one() restituisce un oggetto di tipo InsertOneResult,\n",
+    "# che ha una proprietà di nome inserted_id che contiene il valore ID \n",
+    "# dell'oggetto inserito nella collection\n",
+    "\n",
+    "dict = {\n",
+    "    \"firstname\": \"Mario\", \n",
+    "    \"lastname\": \"Rossi\", \n",
+    "    \"city\": \"Roma\", \n",
+    "    \"age\": 45\n",
+    "    }\n",
+    "# result = users.insert_one(dict)\n",
+    "# if result.inserted_id:\n",
+    "#    print(result.inserted_id, \"created!!!\")\n",
+    "\n",
+    "# Per inserire più dizionari in una collection MongoDB\n",
+    "# utilizziamo il metodo insert_many()\n",
+    "# Il metodo insert_many() restituisce un oggetto di tipo InsertManyResult\n",
+    "# che ha una proprietà di nome inserted_ids che contiene i valori ID\n",
+    "# degli oggetti inseriti nella collection\n",
+    "\n",
+    "lista = [\n",
+    "    {\"firstname\": \"Giuseppe\", \"lastname\": \"Verdi\", \"city\": \"Milano\", \"age\": 21},\n",
+    "    {\"firstname\": \"Francesca\", \"lastname\": \"Neri\", \"city\": \"Torino\", \"age\": 39},\n",
+    "    {\"firstname\": \"Antonio\", \"lastname\": \"Bianchi\", \"city\": \"Napoli\", \"age\": 40}\n",
+    "]\n",
+    "\n",
+    "# result = users.insert_many(lista)\n",
+    "#if result.inserted_ids:\n",
+    "#    print(result.inserted_ids, \"created!!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3c20942",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "\n",
+    "connectionString = 'mongodb+srv://admin:md75U6GzY7aY7YpG@cluster0.7opl1ou.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'\n",
+    "cluster = MongoClient(connectionString)\n",
+    "db = cluster['DataMongoPython2']\n",
+    "users = db['Users']\n",
+    "\n",
+    "# Leggere dati nella collection -> SELECT di SQL\n",
+    "# Per leggere dati da una collection in MongoDB possiamo utilizzare il metodo \n",
+    "# find_one() -> restituisce la prima occorrenza della selezione\n",
+    "\n",
+    "obj = users.find_one()\n",
+    "# print(obj)\n",
+    "# print(obj['firstname'], obj['lastname'])\n",
+    "\n",
+    "# Per leggere tutti i dati da una collection in mongo DB possiamo utilizzare\n",
+    "# il metodo find() -> restituisce tutte le occorrenze della selezione\n",
+    "\n",
+    "lista = users.find()\n",
+    "# print(lista)\n",
+    "# for u in lista:\n",
+    "    # print(u)\n",
+    "    # print(u['firstname'], u['lastname'])\n",
+    "    \n",
+    "# Filtrare dati nella collection\n",
+    "# utilizzando il metodo find o find_one il primo paramentro che passo al metodo\n",
+    "# è un oggetto di tipo query e possiamo utilizzarlo per filtrare i risultati\n",
+    "\n",
+    "lista = users.find({\"city\": \"Roma\"})\n",
+    "# print(lista)\n",
+    "# for u in lista:\n",
+    "    # print(u)\n",
+    "    # print(u['firstname'], u['lastname'])\n",
+    "\n",
+    "\n",
+    "# Seleziono tutti gli oggetti in cui la proprietà city è contenuta($in) in un set di valori\n",
+    "\n",
+    "lista = users.find({\"city\": {\"$in\": [\"Roma\", \"Milano\", \"Palermo\"]}})\n",
+    "# for u in lista:\n",
+    "    # print(u)\n",
+    "\n",
+    "# Seleziono tutti gli oggetti in cui la proprietà age è minore($lt)\n",
+    "# di un determinato valore numerico\n",
+    "lista = users.find({\"age\": {\"$lt\": 30}})\n",
+    "# for u in lista:\n",
+    "    #print(u)\n",
+    "\n",
+    "# Seleziono tutti gli oggetti in cui la proprietà age è maggiore($gt)\n",
+    "# di un determinato valore numerico\n",
+    "lista = users.find({\"age\": {\"$gt\": 30}})\n",
+    "# for u in lista:\n",
+    "    #print(u)\n",
+    "\n",
+    "# Seleziono tutti gli oggetti in cui la proprietà city  \n",
+    "# AND la proprietà firstname hanno un determianto valore\n",
+    "lista = users.find({\"city\": \"Roma\", \"firstname\": \"Mario\"})\n",
+    "#for u in lista:\n",
+    "    #print(u)\n",
+    "    \n",
+    "# Seleziono tutti gli oggetti in cui la proprietà city  \n",
+    "# OR la proprietà firstname hanno un determianto valore\n",
+    "lista = users.find({\"$or\": [{\"city\": \"Roma\"}, {\"firstname\": \"Giuseppe\"}]})\n",
+    "#for u in lista:\n",
+    "    #print(u)\n",
+    "    \n",
+    "# Seleziono tutti gli oggetti filtrati tramite espressioni regolari \n",
+    "# In questo caso abbiamo selezionato tutti gli utenti che hanno \n",
+    "# una città che comincia per M\n",
+    "lista = users.find({\"city\": {\"$regex\": \"^M\"}})\n",
+    "# for u in lista:\n",
+    "    #print(u)\n",
+    "    \n",
+    "# Utilizzando il metodo sort() ho la possibilità di ordinare i dati\n",
+    "# in ordine crescente o decrescente\n",
+    "# sort(field, 1) -> Crescente\n",
+    "# sort(field, -1) -> Decrescente\n",
+    "lista = users.find().sort('age', -1)\n",
+    "#for u in lista:\n",
+    "    #print(u)\n",
+    "\n",
+    "# Per limitare o paginare i risultati di una ricerca in MongoDB \n",
+    "# possiamo utilizzare il metodo limit(limit:int) come paramentro,\n",
+    "# inserire ilnumero di risultati che si vuole visualizzare\n",
+    "# Con il metodo skip(skip:int) posso indicare il numero di \n",
+    "# risultati da escludere dalla richiesta\n",
+    "lista = users.find().limit(3).skip(0)\n",
+    "for u in lista:\n",
+    "    print(u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "701964be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 modified!!!\n",
+      "0 modified!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "\n",
+    "connectionString = 'mongodb+srv://admin:md75U6GzY7aY7YpG@cluster0.7opl1ou.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'\n",
+    "cluster = MongoClient(connectionString)\n",
+    "db = cluster['DataMongoPython2']\n",
+    "users = db['Users']\n",
+    "\n",
+    "# Modificare un dato nella collection MongoDB -> Update in SQL\n",
+    "# update_one(filter, update)\n",
+    "# update_many(filter, update)\n",
+    "\n",
+    "# il primo parametro del metodo update_one() è un oggetto di tipo query\n",
+    "# che definisce quale elemento aggiornate, il secondo parametro è\n",
+    "# è un oggetto con le modifiche da applicare all'elemento selezionato\n",
+    "\n",
+    "result = users.update_one({\"city\": \"Milano\"},{\"$set\": {\"firstname\": \"Simone\", \"age\": 99}})\n",
+    "print(result.modified_count, \"modified!!!\")\n",
+    "\n",
+    "\n",
+    "# il primo parametro del metodo update_many() è un oggetto di tipo query\n",
+    "# che definisce quale elemento aggiornate, il secondo parametro è\n",
+    "# è un oggetto con le modifiche da applicare a tutti gli elementi selezionato\n",
+    "\n",
+    "result = users.update_many({\"firstname\": {\"$regex\": \"^A\"}}, {\"$set\": {\"age\": 10}})\n",
+    "print(result.modified_count, \"modified!!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8e61829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "\n",
+    "connectionString = 'mongodb+srv://admin:md75U6GzY7aY7YpG@cluster0.7opl1ou.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'\n",
+    "cluster = MongoClient(connectionString)\n",
+    "db = cluster['DataMongoPython2']\n",
+    "users = db['Users']\n",
+    "\n",
+    "# Eliminare un dato da una collection -> DELETE in SQL\n",
+    "# delete_one(filter)\n",
+    "# delete_many(filter)\n",
+    "\n",
+    "# Il parametro del metodo delete_one è un oggetto di tipo query\n",
+    "# che definisce quale elemento eliminare nella collection\n",
+    "result = users.delete_one({\"city\": \"Napoli\"})\n",
+    "print(result.deleted_count, \"deleted!!!\")\n",
+    "\n",
+    "# Il parametro del metodo delete_many è un oggetto di tipo query\n",
+    "# che definisce tutti gli elementi da eliminare nella collection\n",
+    "result = users.delete_many({\"city\": \"Milano\"})\n",
+    "print(result.deleted_count, \"deleted!!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32fbe8f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "\n",
+    "connectionString = 'mongodb+srv://admin:md75U6GzY7aY7YpG@cluster0.7opl1ou.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'\n",
+    "cluster = MongoClient(connectionString)\n",
+    "db = cluster['DataMongoPython2']\n",
+    "\n",
+    "# Controlle se è presente nel mio DB una collection con il nome Peoples\n",
+    "if \"Peoples\" not in db.list_collection_names():\n",
+    "    # Se non presente la crea, altrimenti la ignora\n",
+    "    db.create_collection(\"Peoples\")\n",
+    "\n",
+    "peoples = db['Peoples']\n",
+    "\n",
+    "# Embedded VS References\n",
+    "\n",
+    "    "
    ]
   }
  ],
