Traccia escercizio MongoDB

--- a/connectPythonMongo.ipynb
+++ b/connectPythonMongo.ipynb
@@ -287,7 +287,7 @@
     "cluster = MongoClient(connectionString)\n",
     "db = cluster['DataMongoPython2']\n",
     "\n",
-    "# Controlle se è presente nel mio DB una collection con il nome Peoples\n",
+    "# Controllo se è presente nel mio DB una collection con il nome Peoples\n",
     "if \"Peoples\" not in db.list_collection_names():\n",
     "    # Se non presente la crea, altrimenti la ignora\n",
     "    db.create_collection(\"Peoples\")\n",
@@ -296,7 +296,101 @@
     "\n",
     "# Embedded VS References\n",
     "\n",
+    "# Embedded\n",
+    "# Annido un oggetto completo in una proprietà del dizionario\n",
+    "dict = {\n",
+    "    \"name\": \"Mario\",\n",
+    "    \"lastname\": \"Rossi\",\n",
+    "    \"age\": 23,\n",
+    "    \"active\": True,\n",
+    "    \"address\": {\n",
+    "        \"street\": \"Via angelo Emo, 13\",\n",
+    "        \"city\": \"Roma\"\n",
+    "    },\n",
+    "    \"language\": [\"Italiano\", \"Inglese\", \"Francese\"]\n",
+    "}\n",
+    "\n",
+    "# salvo i dati del dizionario nella collection\n",
+    "# result = peoples.insert_one(dict)\n",
+    "# print(result.inserted_id, \"created!\")\n",
+    "\n",
+    "# Leggo i dati del dizionario presente nella collection e ne stampo i valori\n",
+    "obj = peoples.find_one({\"name\": \"Mario\"})\n",
+    "print(obj)\n",
+    "print(obj[\"name\"], obj[\"lastname\"], obj[\"address\"][\"city\"], obj[\"language\"][1])\n",
+    "\n",
+    "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "15550954",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('6874bd18139e2c936f2a07f3'), 'name': 'Giuseppe', 'lastname': 'Verdi', 'age': 41, 'active': True, 'address': {'street': 'Via marconi, 5', 'city': 'Milano'}, 'language': ['Inglese']}\n",
+      "{'_id': ObjectId('6874c07f139e2c936f2a07f5'), 'products': ['Apple Iphone', 'Google Chromebook'], 'date': datetime.datetime(2025, 7, 14, 10, 31, 59, 748000), 'people_id': ObjectId('6874bd18139e2c936f2a07f3')}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "from datetime import datetime\n",
+    "\n",
+    "connectionString = 'mongodb+srv://admin:md75U6GzY7aY7YpG@cluster0.7opl1ou.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'\n",
+    "cluster = MongoClient(connectionString)\n",
+    "db = cluster['DataMongoPython2']\n",
+    "\n",
+    "if \"Cart\" not in db.list_collection_names():\n",
+    "    # Se non presente la crea, altrimenti la ignora\n",
+    "    db.create_collection(\"Cart\")\n",
+    "\n",
+    "peoples = db['Peoples']\n",
+    "cart = db['Cart']\n",
+    "\n",
+    "# Embedded VS References\n",
+    "\n",
+    "dict = {\n",
+    "    \"name\": \"Giuseppe\",\n",
+    "    \"lastname\": \"Verdi\",\n",
+    "    \"age\": 41,\n",
+    "    \"active\": True,\n",
+    "    \"address\": {\n",
+    "        \"street\": \"Via marconi, 5\",\n",
+    "        \"city\": \"Milano\"\n",
+    "    },\n",
+    "    \"language\": [\"Inglese\"]\n",
+    "}\n",
+    "\n",
+    "# result = peoples.insert_one(dict)\n",
+    "# print(result.inserted_id, \"created!\")\n",
+    "\n",
+    "# References\n",
+    "# Leggo i dati del dizionario presente nella collection\n",
+    "verdi = peoples.find_one({\"name\": \"Giuseppe\"})\n",
+    "# Salvo i dati su due o più collection diverse mettendo \n",
+    "# in relazione i dati tramite reference sul campo id\n",
+    "cartDict = {\n",
+    "    \"products\": [\"Apple Iphone\", \"Google Chromebook\"],\n",
+    "    \"date\": datetime.now(),\n",
+    "    \"people_id\": verdi[\"_id\"]\n",
+    "}\n",
+    "\n",
+    "# result = cart.insert_one(cartDict)\n",
+    "# print(result.inserted_id, \"created!\")\n",
+    "\n",
+    "verdi = peoples.find_one({\"name\": \"Giuseppe\"})\n",
+    "print(verdi)\n",
+    "\n",
+    "cartList = cart.find({\"people_id\": verdi[\"_id\"]})\n",
+    "for cart in cartList:\n",
+    "    print(cart)\n",
+    "\n"
    ]
   }
  ],
