--- a/introNumPy.ipynb
+++ b/introNumPy.ipynb
@@ -23,7 +23,20 @@
    "execution_count": null,
    "id": "e5ac845f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "----------\n",
+      "----------\n",
+      "0.45524430230104496\n",
+      "[55 62 80 63 51 57 60 52 86 96]\n",
+      "[51 55 55]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -33,6 +46,8 @@
     "myList = [1,2,3,4,5]\n",
     "arr = np.array(myList)\n",
     "# print(arr)\n",
+    "# print(type(arr))\n",
+    "\n",
     "\n",
     "# Un array multidimensionale\n",
     "multiArr = np.array([[1,2,3,4,5], [1,2,3,4,5]])\n",
